src/Components/Footer.css
@import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap');

@font-face {
    font-family: 'OEGP';
    src: local('OEFP'), url('../fonts/oldEnglishGothicPixel.ttf') format('truetype');
}

.logoName{
    font-size: 1.3rem;
    font-weight: 700;
}

.footer {
    padding: 3%; 
    padding-top: 3rem;
    padding-bottom: 3rem;
    display: flex;
    flex-direction: row;
    height: 25vh; 
    width: auto;
    color: white; 
    align-content: center;
    justify-content: space-between; 
    align-items: center;
}

.rightFooter {
    display: flex;
    flex-direction: column;
    width: auto;
}

.footerContact {
    font-size: 1.2rem;
    display: flex;
    flex-direction: column;
}

@media screen and (max-width: 700px) {
    .logoName {
        font-size: 1.2rem;
    }

    .bttButton {
        visibility: hidden;
        display: none;
    }

    .logoName {
        font-size: 1.7rem;
        display: flex;
        justify-content: center;
    }

    .footer {
        flex-direction: column;
        height: 50vh;
    }

    .rightFooter {
        vertical-align: middle;   
    }

    .footerSocialLinks {
        display: flex;
        justify-content: center;
    }
}

